# Fingerprint-Attendance

./: .env  .replit  index.html  init_sample_data.py  main.py  pyproject.toml
arduino_code/: fingerprint_attendance_system.ino
attached_assets/: Pasted-Your-task-is-to-design-and-implement-an-IoT-based-fingerprint-attendance-system-using-an-Arduino-ESP-1743524732056.txt
documentation/: api.html  hardware.html  index.html  setup_guide.md  troubleshooting.md
firebase_config/: README.md  credentials.json  firebase_schema.json  security_rules.json
middleware/: auth_middleware.py
routes/: attendance_routes.py  class_routes.py  fingerprint_routes.py  student_routes.py
schemas/: attendance_schema.py  class_schema.py  student_schema.py
services/: attendance_service.py  firebase_service.py  local_data_service.py
utils/: fingerprint_util.py  mock_fingerprint_data.json  time_util.py
web_interface/: auth.js  index.html
web_interface/css/: fingerprint-management.css  styles.css
web_interface/js/: app.js  fingerprint-management.js
